--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "connect": "^3.6.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "p2": "^0.7.1",
     "rxjs": "5.5.8",
+    "serve-static": "^1.13.2",
     "sw-toolbox": "3.6.0",
     "videogular": "^2.2.1",
     "videogular2": "^6.0.8",
